src/snapshots/crust_boot_you__template_meta_data__testing__detect_duplicate_serde_templat_for_meta_template.snap
---
source: src/template_meta_data.rs
expression: serde_version
---
Err(
    "A template's name (a) is more than once listed",
)
