src/snapshots/crust_boot_you__template_meta_data__testing__from_app_to_serde_template_meta.snap
---
source: src/template_meta_data.rs
expression: serde_version
---
SerdeTemplateMetaData {
    templates: [
        Template {
            name: NotEmptyText(
                "a",
            ),
        },
        Template {
            name: NotEmptyText(
                "b",
            ),
        },
    ],
}
