src/snapshots/crust_boot_you__template_meta_data__testing__from_serde_to_template_meta_app.snap
---
source: src/template_meta_data.rs
expression: serde_version
---
Ok(
    TemplateMetaData {
        templates: [
            Template {
                name: NotEmptyText(
                    "a",
                ),
            },
            Template {
                name: NotEmptyText(
                    "b",
                ),
            },
        ],
    },
)
